# pfind

./: AUTHORS  Makefile.in  README  config.h.in  configure  configure.ac  pfind.spec
autom4te.cache/: output.1  traces.0  traces.1
src/: Makefile.am  Makefile.in  pfind.c
